tests_ex32/tough_test/errors.txt
students/biu_student_terrible/cccgcc.c:6:2: error: extraneous closing brace ('}')
}}
 ^
1 error generated.
